[gd_scene load_steps=21 format=3 uid="uid://dkig6setw5tct"]

[ext_resource type="Script" path="res://Titlescreen.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cjkaxxptkheqn" path="res://Shader.tscn" id="2"]
[ext_resource type="PackedScene" path="res://Mouse.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://ctmhey03rf220" path="res://Sprites/ShipBig.png" id="4"]
[ext_resource type="FontFile" uid="uid://ce1r4wyrotwlx" path="res://Fonts/SansFont.tres" id="5"]
[ext_resource type="Texture2D" uid="uid://b8qrpkeyjqg81" path="res://Sprites/Slider_grabber_normal.png" id="6"]
[ext_resource type="Texture2D" uid="uid://dhsgcidpj7jat" path="res://Sprites/Slider_grabber_focus.png" id="7"]
[ext_resource type="Texture2D" uid="uid://cmd5vrvyhh2up" path="res://Sprites/Slider.png" id="8"]
[ext_resource type="Texture2D" uid="uid://dsg0tix2woy2u" path="res://Sprites/Button_Music1.png" id="9"]
[ext_resource type="Texture2D" uid="uid://ws8n0oieidn8" path="res://Sprites/Button_Music0.png" id="10"]
[ext_resource type="Texture2D" uid="uid://bdb4mmbeaeks3" path="res://Sprites/Button_SFX1.png" id="11"]
[ext_resource type="Texture2D" uid="uid://bflvkeu5wpg3d" path="res://Sprites/Button_SFX0.png" id="12"]
[ext_resource type="Texture2D" uid="uid://bu12kt6d4x7l0" path="res://Sprites/Button_Close0.png" id="13"]
[ext_resource type="Texture2D" uid="uid://wtjnypwqu6uu" path="res://Sprites/Button_Close1.png" id="14"]
[ext_resource type="Texture2D" uid="uid://s68gu12i33ls" path="res://Sprites/NachoComet.png" id="15"]
[ext_resource type="Texture2D" uid="uid://criv1h04jh3no" path="res://Sprites/SpaceBack.png" id="16"]
[ext_resource type="FontFile" uid="uid://kc5myihhvfid" path="res://Fonts/TitleFont.tres" id="17"]

[sub_resource type="StyleBoxTexture" id="3"]
texture = ExtResource("8")
axis_stretch_horizontal = 1
region_rect = Rect2(0, 0, 300, 30)

[sub_resource type="StyleBoxEmpty" id="4"]

[sub_resource type="StyleBoxEmpty" id="5"]

[node name="Titlescreen" type="Node"]
script = ExtResource("1")

[node name="Shader" parent="." instance=ExtResource("2")]

[node name="Mouse" parent="." instance=ExtResource("3")]
layer = 4

[node name="Menu" type="CanvasLayer" parent="."]
layer = 3

[node name="Menu" type="MarginContainer" parent="Menu"]
anchors_preset = -1
anchor_left = 0.130208
anchor_top = 0.0203704
anchor_right = 0.869792
anchor_bottom = 0.918519
offset_left = 1.52588e-05

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Menu"]
layout_mode = 2

[node name="Title" type="Label" parent="Menu/Menu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.72549, 0.141176, 1)
theme_override_colors/font_shadow_color = Color(0.690196, 0.239216, 0.117647, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("17")
text = "N  CHOROIDS"

[node name="TitleNacho" type="Sprite2D" parent="Menu/Menu/VBoxContainer/Title"]
z_index = 18
position = Vector2(284.124, 15.864)
scale = Vector2(0.583909, 0.603573)
texture = ExtResource("15")
centered = false

[node name="MarginContainer" type="VBoxContainer" parent="Menu/Menu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
alignment = 1

[node name="Start" type="Button" parent="Menu/Menu/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("5")
action_mode = 0
text = "Start"
flat = true

[node name="CursorHue" type="HBoxContainer" parent="Menu/Menu/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="Menu/Menu/VBoxContainer/MarginContainer/CursorHue"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5")
text = "Cursor Hue"

[node name="Slider" type="HSlider" parent="Menu/Menu/VBoxContainer/MarginContainer/CursorHue"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
mouse_filter = 1
theme_override_icons/grabber = ExtResource("6")
theme_override_icons/grabber_highlight = ExtResource("7")
theme_override_icons/grabber_disabled = ExtResource("6")
theme_override_styles/slider = SubResource("3")
theme_override_styles/grabber_area = SubResource("4")
theme_override_styles/grabber_area_highlight = SubResource("5")
max_value = 1.0
step = 0.01
value = 0.29
scrollable = false

[node name="Highscore" type="Button" parent="Menu/Menu/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("5")
action_mode = 0
text = "Highscore"
flat = true

[node name="Options" type="VBoxContainer" parent="Menu"]
custom_minimum_size = Vector2(100, 308)
anchors_preset = -1
anchor_left = 0.917187
anchor_top = 0.652778
anchor_right = 0.969271
anchor_bottom = 0.937963
offset_right = -1861.0
offset_bottom = -1013.0
alignment = 2

[node name="MusicButton" type="TextureButton" parent="Menu/Options"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("9")
texture_pressed = ExtResource("10")
flip_h = true

[node name="SFXButton" type="TextureButton" parent="Menu/Options"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("11")
texture_pressed = ExtResource("12")
flip_h = true

[node name="QuitButton" type="TextureButton" parent="Menu/Options"]
layout_mode = 2
texture_normal = ExtResource("13")
texture_pressed = ExtResource("14")
texture_hover = ExtResource("14")
flip_h = true

[node name="Ship" type="Sprite2D" parent="Menu"]
position = Vector2(443.89, 414.255)
scale = Vector2(0.836626, 0.836626)
texture = ExtResource("4")

[node name="Back" type="Sprite2D" parent="Menu"]
z_index = -1
scale = Vector2(1.918, 1.342)
texture = ExtResource("16")
centered = false

[connection signal="pressed" from="Menu/Menu/VBoxContainer/MarginContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="mouse_entered" from="Menu/Menu/VBoxContainer/MarginContainer/CursorHue" to="." method="_on_CursorHue_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Menu/VBoxContainer/MarginContainer/CursorHue" to="." method="_on_CursorHue_mouse_exited"]
[connection signal="value_changed" from="Menu/Menu/VBoxContainer/MarginContainer/CursorHue/Slider" to="Mouse/Mouse" method="_on_CursorHue_value_changed"]
[connection signal="pressed" from="Menu/Menu/VBoxContainer/MarginContainer/Highscore" to="." method="_on_Highscore_pressed"]
[connection signal="toggled" from="Menu/Options/MusicButton" to="." method="_on_MusicButton_toggled"]
[connection signal="toggled" from="Menu/Options/SFXButton" to="." method="_on_SFXButton_toggled"]
[connection signal="pressed" from="Menu/Options/QuitButton" to="." method="_on_QuitButton_pressed"]
